@@ -104,7 +104,7 @@ MAIL_SERVER_SOURCE_VALUES="user global"
 TRANSPORT_SERVER_SOURCE=user
 TRANSPORT_SERVER_SOURCE_LONG=transport-server-src
 TRANSPORT_SERVER_SOURCE_VALUES="user global"
-SERVER_MEMORY=512
+SERVER_MEMORY=
 SERVER_MEMORY_LONG=servermemory
 CLT_MEMORY=50
 CLT_MEMORY_LONG=clt-memory
@@ -173,7 +173,7 @@ PUSHMCPORT_LONG=push-udp-disc-port
 OLPORT=44335
 OLPORT_LONG=push-outlook-port
 
-MUSTOPTS="SERVER_NAME CONFIGDB_PASS OXOBJECT_LINK_HOSTNAME"
+MUSTOPTS="SERVER_NAME CONFIGDB_PASS OXOBJECT_LINK_HOSTNAME SERVER_MEMORY"
 LONGOPTS='$SERVER_NAME_LONG:,$IMAP_SERVER_LONG:,$SMTP_SERVER_LONG:,$LOGIN_SOURCE_LONG:,$MAIL_SERVER_SOURCE_LONG:,$TRANSPORT_SERVER_SOURCE_LONG:,$CONFIGDB_USER_LONG:,$CONFIGDB_PASS_LONG:,$CONFIGDB_READ_LONG:,$CONFIGDB_WRITE_LONG:,$CONFIGDB_DBNAME_LONG:,$SERVER_MEMORY_LONG:,$CLT_MEMORY_LONG:,$CONFIGDB_READ_PORT_LONG:,$CONFIGDB_WRITE_PORT_LONG:,$TMPDIR_PATH_LONG:,$MASTER_PASS_LONG:,$MASTER_USER_LONG:,$AJP_JVM_ROUTE_LONG:,$AJP_BIND_ADDR_LONG:,$OXOBJECT_LINK_HOSTNAME_LONG:,$URL_LONG:,$UDPDISCOVERYADDR_LONG:,$UDPDISCOVERYPORT_LONG:,$AMCACHEPORT_LONG:,$GWCACHEPORT_LONG:,$GWSCACHEPORT_LONG:,$OXCLUSTERIP_LONG:,$PUSHMCPORT_LONG:,$OLPORT_LONG:,$SESSIONCONTAINERTIMEOUT_LONG:,$NUMBEROFSESSIONCONTAINERS_LONG:,$MAXSESSION_LONG:,$ISDOUBLELOGINPERMITTED_LONG:,$SESSIONDEFAULTLIFETIME_LONG:,$DISABLE_RMI_AUTH_LONG,$UDP_SESS_DISC_PORT_LONG:,$NO_LICENSE_LONG,$ADD_LICENSE_LONG:'
 
 usage() {
@@ -471,9 +471,8 @@ done
 
 for mem in SERVER_MEMORY CLT_MEMORY; do
     MEMMEM=$(eval echo \$$mem)
-    MEM=$(echo $MEMMEM| sed -e 's;[^0-9];;g')
-    if [ 0$MEM -le 0 ]; then
-        die "$MEMMEM is not an allowed value for --$(eval echo \$${mem}_LONG), must be > 0"
+    if [ -n "$(echo $MEMMEM | sed -e 's;[0-9];;g')" ]; then
+        die "$MEMMEM is not an allowed value for --$(eval echo \$${mem}_LONG), must be a number > 0"
     fi
 done
 
